refactor: ajuste na semantica do código e estilização

--- a/grupo-simios.html
+++ b/grupo-simios.html
@@ -102,7 +102,7 @@
                             de Idosos Viver Mais.</p>
                     </div>
                 </div>
-                <!-- Carrossel Mobile -->
+                <!-- Carrossel Colaboradores Mobile -->
                 <div id="carouselExample" class="carousel slide d-md-none">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -110,8 +110,8 @@
                                 style="width: 18.125rem; height: 21.312rem">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/ana.png"
                                     alt="Foto da colaboradora Ana" style="width: 10rem; height: 10rem" />
-                                <div class="card-body text-center">
-                                    <h5 class="card-title text-white fs-2">Ana<br>Martins</h5>
+                                <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title text-white fs-2 w-50">Ana Martins</h5>
                                     <p class="card-text text-white">
                                         Organizadora do Coletivo e buscador de clientes
                                     </p>
@@ -123,8 +123,8 @@
                                 style="width: 18.125rem; height: 21.312rem">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/erick.png"
                                     alt="Foto do colaborador Erick" style="width: 10rem; height: 10rem" />
-                                <div class="card-body text-center">
-                                    <h5 class="card-title text-white fs-2">Erick<br>Rosa</h5>
+                                <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title text-white fs-2 w-50">Erick Rosa</h5>
                                     <p class="card-text text-white">
                                         Organizador do Coletivo e Analista de Sistemas
                                     </p>
@@ -136,8 +136,8 @@
                                 style="width: 18.125rem; height: 21.312rem">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/gabriel.png"
                                     alt="Foto do colaborador Gabriel" style="width: 10rem; height: 10rem" />
-                                <div class="card-body text-center">
-                                    <h5 class="card-title text-white fs-2">Gabriel<br>Santiago</h5>
+                                <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title text-white fs-2 w-50">Gabriel Santiago</h5>
                                     <p class="card-text text-white">Tester</p>
                                 </div>
                             </div>
@@ -147,8 +147,8 @@
                                 style="width: 18.125rem; height: 21.312rem">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/joao.png"
                                     alt="Foto do colaborador João" style="width: 10rem; height: 10rem" />
-                                <div class="card-body text-center">
-                                    <h5 class="card-title text-white fs-2">João<br>Arruda</h5>
+                                <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title text-white fs-2 w-50">João Arruda</h5>
                                     <p class="card-text text-white">Product Designer</p>
                                 </div>
                             </div>
@@ -158,8 +158,8 @@
                                 style="width: 18.125rem; height: 21.312rem;">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/juan.png"
                                     alt="Foto do colaborador Juan" style="width: 10rem; height: 10rem;">
-                                <div class="card-body text-center">
-                                    <h5 class="card-title text-white fs-2">Juan<br>Mendes</h5>
+                                <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title text-white fs-2 w-50">Juan<br>Mendes</h5>
                                     <p class="card-text text-white">Desenvolvedor Web Full Stack</p>
                                 </div>
                             </div>
@@ -169,8 +169,8 @@
                                 style="width: 18.125rem; height: 21.312rem;">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/julie.png"
                                     alt="Foto da colaboradora Julie" style="width: 10rem; height: 10rem;">
-                                <div class="card-body text-center">
-                                    <h5 class="card-title text-white fs-2">Julie<br>Godoi</h5>
+                                <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title text-white fs-2 w-50">Julie Godoi</h5>
                                     <p class="card-text text-white">Desenvolvedora web</p>
                                 </div>
                             </div>
@@ -180,8 +180,8 @@
                                 style="width: 18.125rem; height: 21.312rem;">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/leonarda.png"
                                     alt="Foto da colaboradora Leonarda" style="width: 10rem; height: 10rem;">
-                                <div class="card-body text-center">
-                                    <h5 class="card-title text-white fs-2">Leonarda<br>Oliveira</h5>
+                                <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title text-white fs-2 w-50">Leonarda Oliveira</h5>
                                     <p class="card-text text-white">Desenvolvedora Front-End</p>
                                 </div>
                             </div>
@@ -191,8 +191,8 @@
                                 style="width: 18.125rem; height: 21.312rem;">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/luis.png"
                                     alt="Foto do colaborador Luís" style="width: 10rem; height: 10rem;">
-                                <div class="card-body text-center">
-                                    <h5 class="card-title text-white fs-2">Luís<br>Duarte</h5>
+                                <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title text-white fs-2 w-50">Luís Duarte</h5>
                                     <p class="card-text text-white">Documenter</p>
                                 </div>
                             </div>
@@ -202,8 +202,8 @@
                                 style="width: 18.125rem; height: 21.312rem;">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/melissa.png"
                                     alt="Foto da colaboradora Melissa" style="width: 10rem; height: 10rem;">
-                                <div class="card-body text-center">
-                                    <h5 class="card-title text-white fs-2">Melissa<br>Ameida</h5>
+                                <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title text-white fs-2 w-50">Melissa Ameida</h5>
                                     <p class="card-text text-white">UX/UI Designer </p>
                                 </div>
                             </div>
@@ -226,8 +226,8 @@
                         style="width: 18.125rem; height: 21.312rem;">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/ana.png"
                             alt="Foto da colaboradora Ana" style="width: 10rem; height: 10rem;">
-                        <div class="card-body text-center">
-                            <h5 class="card-title text-white fs-2">Ana<br>Martins</h5>
+                        <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                            <h5 class="card-title text-white fs-2 w-50">Ana Martins</h5>
                             <p class="card-text text-white">Organizadora do Coletivo e buscador de clientes</p>
                         </div>
                     </div>
@@ -235,8 +235,8 @@
                         style="width: 18.125rem; height: 21.312rem;">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/erick.png"
                             alt="Foto do colaborador Erick" style="width: 10rem; height: 10rem;">
-                        <div class="card-body text-center">
-                            <h5 class="card-title text-white fs-2">Erick<br>Rosa</h5>
+                        <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                            <h5 class="card-title text-white fs-2 w-50">Erick Rosa</h5>
                             <p class="card-text text-white">Organizador do Coletivo e Analista de Sistemas</p>
                         </div>
                     </div>
@@ -244,8 +244,8 @@
                         style="width: 18.125rem; height: 21.312rem;">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/gabriel.png"
                             alt="Foto do colaborador Gabriel" style="width: 10rem; height: 10rem;">
-                        <div class="card-body text-center">
-                            <h5 class="card-title text-white fs-2">Gabriel<br>Santiago</h5>
+                        <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                            <h5 class="card-title text-white fs-2 w-50">Gabriel Santiago</h5>
                             <p class="card-text text-white">Tester</p>
                         </div>
                     </div>
@@ -253,8 +253,8 @@
                         style="width: 18.125rem; height: 21.312rem;">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/joao.png"
                             alt="Foto do colaborador João" style="width: 10rem; height: 10rem;">
-                        <div class="card-body text-center">
-                            <h5 class="card-title text-white fs-2">João<br>Arruda</h5>
+                        <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                            <h5 class="card-title text-white fs-2 w-50">João Arruda</h5>
                             <p class="card-text text-white">Product Designer</p>
                         </div>
                     </div>
@@ -262,8 +262,8 @@
                         style="width: 18.125rem; height: 21.312rem;">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/juan.png"
                             alt="Foto do colaborador Juan" style="width: 10rem; height: 10rem;">
-                        <div class="card-body text-center">
-                            <h5 class="card-title text-white fs-2">Juan<br>Mendes</h5>
+                        <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                            <h5 class="card-title text-white fs-2 w-50">Juan Mendes</h5>
                             <p class="card-text text-white">Desenvolvedor Web Full Stack</p>
                         </div>
                     </div>
@@ -271,8 +271,8 @@
                         style="width: 18.125rem; height: 21.312rem;">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/julie.png"
                             alt="Foto da colaboradora Julie" style="width: 10rem; height: 10rem;">
-                        <div class="card-body text-center">
-                            <h5 class="card-title text-white fs-2">Julie<br>Godoi</h5>
+                        <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                            <h5 class="card-title text-white fs-2 w-50">Julie Godoi</h5>
                             <p class="card-text text-white">Desenvolvedora web</p>
                         </div>
                     </div>
@@ -280,8 +280,8 @@
                         style="width: 18.125rem; height: 21.312rem;">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/leonarda.png"
                             alt="Foto da colaboradora Leonarda" style="width: 10rem; height: 10rem;">
-                        <div class="card-body text-center">
-                            <h5 class="card-title text-white fs-2">Leonarda<br>Oliveira</h5>
+                        <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                            <h5 class="card-title text-white fs-2 w-50">Leonarda Oliveira</h5>
                             <p class="card-text text-white">Desenvolvedora Front-End</p>
                         </div>
                     </div>
@@ -289,8 +289,8 @@
                         style="width: 18.125rem; height: 21.312rem;">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/luis.png"
                             alt="Foto do colaborador Luís" style="width: 10rem; height: 10rem;">
-                        <div class="card-body text-center">
-                            <h5 class="card-title text-white fs-2">Luís<br>Duarte</h5>
+                        <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                            <h5 class="card-title text-white fs-2 w-50">Luís Duarte</h5>
                             <p class="card-text text-white">Documenter</p>
                         </div>
                     </div>
@@ -298,8 +298,8 @@
                         style="width: 18.125rem; height: 21.312rem;">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/melissa.png"
                             alt="Foto da colaboradora Melissa" style="width: 10rem; height: 10rem;">
-                        <div class="card-body text-center">
-                            <h5 class="card-title text-white fs-2">Melissa<br>Ameida</h5>
+                        <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                            <h5 class="card-title text-white fs-2 w-50">Melissa Ameida</h5>
                             <p class="card-text text-white">UX/UI Designer </p>
                         </div>
                     </div>
