refactor: ajuste na semantica do código e estilização

--- a/grupo-simios.html
+++ b/grupo-simios.html
@@ -159,7 +159,7 @@
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/juan.png"
                                     alt="Foto do colaborador Juan" style="width: 10rem; height: 10rem;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                                    <h5 class="card-title text-white fs-2 w-50">Juan<br>Mendes</h5>
+                                    <h5 class="card-title text-white fs-2 w-50">Juan Mendes</h5>
                                     <p class="card-text text-white">Desenvolvedor Web Full Stack</p>
                                 </div>
                             </div>
