style: ajusta padrão de tamanho das fonts da página do grupo simios e cargos

--- a/grupo-simios.html
+++ b/grupo-simios.html
@@ -55,8 +55,8 @@
     <header class="py-md-5 d-flex align-items-center justify-content-center">
         <div class="container ">
             <div class="row my-5 align-items-center header flex-column flex-sm-row">
-                <div class="col-12 col-md-8 px-4 px-md-5">
-                    <h1 class="h-grupo display-3 pb-2 ">Site desenvolvido voluntariamente pelo Grupo Símios</h1>
+                <div class="col-12 col-md-8 ps-4 pe-4 ps-md-0 pe-md-0">
+                    <h1 class="h-grupo display-4 pb-2 lh-1">Site desenvolvido voluntariamente pelo Grupo Símios</h1>
                     <p class="p-grupo fs-5">O Grupo Símios é um coletivo de desenvolvimento profissional, que busca
                         aprimorar habilidades profissionais através do engajamento em projetos voluntários, como o
                         auxílio na criação de websites institucionais para ONGs em todo o Brasil.</p>
@@ -98,7 +98,7 @@
                 <div class="row">
                     <div class="col-12 mb-2 mb-md-5 mt-5 px-4 px-md-5">
                         <h2 class="title-equipe display-3">Equipe</h2>
-                        <p class="p-equipe">Conheça o time responsável pela criação e desenvolvimento do site do Grupo
+                        <p class="p-equipe fs-5">Conheça o time responsável pela criação e desenvolvimento do site do Grupo
                             de Idosos Viver Mais.</p>
                     </div>
                 </div>
@@ -111,9 +111,9 @@
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/ana.png"
                                     alt="Foto da colaboradora Ana" style="width: 10rem; height: 10rem" />
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                                    <h5 class="card-title text-white fs-2 w-50">Ana Martins</h5>
+                                    <h3 class="card-title text-white fs-2 w-50">Ana Martins</h3>
                                     <p class="card-text text-white">
-                                        Organizadora do Coletivo e buscador de clientes
+                                        Organizadora do Coletivo e Buscadora de clientes
                                     </p>
                                 </div>
                             </div>
@@ -124,10 +124,8 @@
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/erick.png"
                                     alt="Foto do colaborador Erick" style="width: 10rem; height: 10rem" />
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                                    <h5 class="card-title text-white fs-2 w-50">Erick Rosa</h5>
-                                    <p class="card-text text-white">
-                                        Organizador do Coletivo e Analista de Sistemas
-                                    </p>
+                                    <h3 class="card-title text-white fs-2 w-50">Erick Rosa</h3>
+                                    <p class="card-text text-white"> Organizador, Buscador de clientes e Analista</p>
                                 </div>
                             </div>
                         </div>
@@ -137,8 +135,8 @@
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/gabriel.png"
                                     alt="Foto do colaborador Gabriel" style="width: 10rem; height: 10rem" />
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                                    <h5 class="card-title text-white fs-2 w-50">Gabriel Santiago</h5>
-                                    <p class="card-text text-white">Tester</p>
+                                    <h3 class="card-title text-white fs-2 w-50">Gabriel Santiago</h3>
+                                    <p class="card-text text-white">Documenter e Tester</p>
                                 </div>
                             </div>
                         </div>
@@ -148,8 +146,8 @@
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/joao.png"
                                     alt="Foto do colaborador João" style="width: 10rem; height: 10rem" />
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                                    <h5 class="card-title text-white fs-2 w-50">João Arruda</h5>
-                                    <p class="card-text text-white">Product Designer</p>
+                                    <h3 class="card-title text-white fs-2 w-50">João Arruda</h3>
+                                    <p class="card-text text-white">Web Designer</p>
                                 </div>
                             </div>
                         </div>
@@ -159,8 +157,8 @@
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/juan.png"
                                     alt="Foto do colaborador Juan" style="width: 10rem; height: 10rem;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                                    <h5 class="card-title text-white fs-2 w-50">Juan Mendes</h5>
-                                    <p class="card-text text-white">Desenvolvedor Web Full Stack</p>
+                                    <h3 class="card-title text-white fs-2 w-50">Juan Mendes</h3>
+                                    <p class="card-text text-white">Desenvolvedor</p>
                                 </div>
                             </div>
                         </div>
@@ -170,8 +168,8 @@
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/julie.png"
                                     alt="Foto da colaboradora Julie" style="width: 10rem; height: 10rem;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                                    <h5 class="card-title text-white fs-2 w-50">Julie Godoi</h5>
-                                    <p class="card-text text-white">Desenvolvedora web</p>
+                                    <h3 class="card-title text-white fs-2 w-50">Julie Godoi</h3>
+                                    <p class="card-text text-white">Coordenadora do Desenvolvimento e Desenvolvedora</p>
                                 </div>
                             </div>
                         </div>
@@ -181,8 +179,8 @@
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/leonarda.png"
                                     alt="Foto da colaboradora Leonarda" style="width: 10rem; height: 10rem;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                                    <h5 class="card-title text-white fs-2 w-50">Leonarda Oliveira</h5>
-                                    <p class="card-text text-white">Desenvolvedora Front-End</p>
+                                    <h3 class="card-title text-white fs-2 w-50">Leonarda Oliveira</h3>
+                                    <p class="card-text text-white">Desenvolvedora</p>
                                 </div>
                             </div>
                         </div>
@@ -192,7 +190,7 @@
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/luis.png"
                                     alt="Foto do colaborador Luís" style="width: 10rem; height: 10rem;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                                    <h5 class="card-title text-white fs-2 w-50">Luís Duarte</h5>
+                                    <h3 class="card-title text-white fs-2 w-50">Luís Duarte</h3>
                                     <p class="card-text text-white">Documenter</p>
                                 </div>
                             </div>
@@ -203,8 +201,8 @@
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/melissa.png"
                                     alt="Foto da colaboradora Melissa" style="width: 10rem; height: 10rem;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                                    <h5 class="card-title text-white fs-2 w-50">Melissa Ameida</h5>
-                                    <p class="card-text text-white">UX/UI Designer </p>
+                                    <h3 class="card-title text-white fs-2 w-50">Melissa Ameida</h3>
+                                    <p class="card-text text-white">Coordenadora do Design e Designer</p>
                                 </div>
                             </div>
                         </div>
@@ -227,8 +225,8 @@
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/ana.png"
                             alt="Foto da colaboradora Ana" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                            <h5 class="card-title text-white fs-2 w-50">Ana Martins</h5>
-                            <p class="card-text text-white">Organizadora do Coletivo e buscador de clientes</p>
+                            <h3 class="card-title text-white fs-2 w-50 lh-1">Ana Martins</h3>
+                            <p class="card-text text-white lh-1">Organizadora do Coletivo e Buscadora de clientes</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe2 card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
@@ -236,8 +234,8 @@
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/erick.png"
                             alt="Foto do colaborador Erick" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                            <h5 class="card-title text-white fs-2 w-50">Erick Rosa</h5>
-                            <p class="card-text text-white">Organizador do Coletivo e Analista de Sistemas</p>
+                            <h3 class="card-title text-white fs-2 w-50 lh-1">Erick Rosa</h3>
+                            <p class="card-text text-white lh-1">Organizador, Buscador de clientes e Analista</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
@@ -245,8 +243,8 @@
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/gabriel.png"
                             alt="Foto do colaborador Gabriel" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                            <h5 class="card-title text-white fs-2 w-50">Gabriel Santiago</h5>
-                            <p class="card-text text-white">Tester</p>
+                            <h3 class="card-title text-white fs-2 w-50 lh-1">Gabriel Santiago</h3>
+                            <p class="card-text text-white lh-1">Documenter e Tester</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
@@ -254,8 +252,8 @@
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/joao.png"
                             alt="Foto do colaborador João" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                            <h5 class="card-title text-white fs-2 w-50">João Arruda</h5>
-                            <p class="card-text text-white">Product Designer</p>
+                            <h3 class="card-title text-white fs-2 w-50 lh-1">João Arruda</h3>
+                            <p class="card-text text-white lh-1">Designer</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
@@ -263,8 +261,8 @@
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/juan.png"
                             alt="Foto do colaborador Juan" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                            <h5 class="card-title text-white fs-2 w-50">Juan Mendes</h5>
-                            <p class="card-text text-white">Desenvolvedor Web Full Stack</p>
+                            <h3 class="card-title text-white fs-2 w-50 lh-1">Juan Mendes</h3>
+                            <p class="card-text text-white lh-1">Desenvolvedor</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
@@ -272,8 +270,8 @@
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/julie.png"
                             alt="Foto da colaboradora Julie" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                            <h5 class="card-title text-white fs-2 w-50">Julie Godoi</h5>
-                            <p class="card-text text-white">Desenvolvedora web</p>
+                            <h3 class="card-title text-white fs-2 w-50 lh-1">Julie Godoi</h3>
+                            <p class="card-text text-white lh-1">Coordenadora do Desenvolvimento e Desenvolvedora</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
@@ -281,8 +279,8 @@
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/leonarda.png"
                             alt="Foto da colaboradora Leonarda" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                            <h5 class="card-title text-white fs-2 w-50">Leonarda Oliveira</h5>
-                            <p class="card-text text-white">Desenvolvedora Front-End</p>
+                            <h3 class="card-title text-white fs-2 w-50 lh-1">Leonarda Oliveira</h3>
+                            <p class="card-text text-white lh-1">Desenvolvedora</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
@@ -290,8 +288,8 @@
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/luis.png"
                             alt="Foto do colaborador Luís" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                            <h5 class="card-title text-white fs-2 w-50">Luís Duarte</h5>
-                            <p class="card-text text-white">Documenter</p>
+                            <h3 class="card-title text-white fs-2 w-50 lh-1">Luís Duarte</h3>
+                            <p class="card-text text-white lh-1">Documenter</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
@@ -299,8 +297,8 @@
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/melissa.png"
                             alt="Foto da colaboradora Melissa" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                            <h5 class="card-title text-white fs-2 w-50">Melissa Ameida</h5>
-                            <p class="card-text text-white">UX/UI Designer </p>
+                            <h3 class="card-title text-white fs-2 w-50 lh-1">Melissa Ameida</h3>
+                            <p class="card-text text-white lh-1">Coordenadora do Design e Designer</p>
                         </div>
                     </div>
                 </div>
