--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <img src="./img/cacto.png" alt="cacto vetor" class="img-fluid" width="250" height="180">
                     </div>
                     <div class="col-8 mt-0 mt-md-5 mb-0 mb-md-5 quem-somos p-4 p-md-5 pt-4">
-                        <h2 class="title-green display-3">Quem Somos</h2>
+                        <h2 class="h2-quem display-3">Quem Somos</h2>
                         <p class="p-quem text-black fs-5">
                             O Grupo de Idosos Viver Mais – GIVM, é uma organização da sociedade
                             civil, sem fins lucrativos, que atua na cidade de Arcoverde em Pernambuco desde 2007, em
@@ -154,7 +154,7 @@
             <div class="container-fluid">
                 <div class="row align-items-center flex-column flex-sm-row">
                     <div class="col-5 px-4 px-sm-5 py-md-0 m-0 mt-4 mb-4 text-atividades">
-                        <h2 class="display-3 title-brown title-atividades">Atividades</h2>
+                        <h2 class="display-3 h2-atividades">Atividades</h2>
                         <p class="p-atividades fs-5">
                             Descubra sorrisos e participação ativa, conheça as vibrantes atividades
                             que realizamos com os idosos. Junte-se a nós na construção de momentos significativos e
@@ -253,7 +253,7 @@
         <section class="apoia pt-4" id="apoia">
             <div class="row container-fluid align-items-end pe-0">
                 <div class="col-12 text-apoia text-black col-md-6 py-4 mb-md-3 mb-0 px-4 px-sm-5">
-                    <h2 class="h1-apoia display-5">Apoie o GIVM</h2>
+                    <h2 class="h2-apoia display-5">Apoie o GIVM</h2>
                     <p class="p-apoia text-black">
                         Ao contribuir financeiramente para nossa ONG, você se torna parte fundamental da
                         transformação positiva na vida de pessoas idosas. Sua doação proporciona recursos para as nossas
@@ -284,7 +284,7 @@
         <div class="modal-dialog">
             <div class="modal-content rounded-4">
                 <div class="modal-header">
-                    <h2 class="modal-title fs-5" id="quemSomosModalLabel">Quem Somos</h2>
+                    <h2 class="modal-title fs-1" id="quemSomosModalLabel">Quem Somos</h2>
                     <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -308,7 +308,7 @@
         <div class="modal-dialog">
             <div class="modal-content rounded-4">
                 <div class="modal-header">
-                    <h2 class="modal-title fs-5" id="estatutoModalLabel">Estatuto</h2>
+                    <h2 class="modal-title fs-1" id="estatutoModalLabel">Estatuto</h2>
                     <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -330,7 +330,7 @@
         <div class="modal-dialog">
             <div class="modal-content rounded-4">
                 <div class="modal-header">
-                    <h2 class="modal-title fs-5" id="transparenciaModalLabel">Transparência</h2>
+                    <h2 class="modal-title fs-1" id="transparenciaModalLabel">Transparência</h2>
                     <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -352,7 +352,7 @@
         <div class="modal-dialog">
             <div class="modal-content rounded-4">
                 <div class="modal-header">
-                    <h2 class="modal-title fs-5" id="missaoModalLabel">Missão</h2>
+                    <h2 class="modal-title fs-1" id="missaoModalLabel">Missão</h2>
                     <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -368,7 +368,7 @@
         <div class="modal-dialog">
             <div class="modal-content rounded-4">
                 <div class="modal-header">
-                    <h2 class="modal-title fs-5" id="visaoModalLabel">Visão</h2>
+                    <h2 class="modal-title fs-1" id="visaoModalLabel">Visão</h2>
                     <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -383,7 +383,7 @@
         <div class="modal-dialog">
             <div class="modal-content rounded-4">
                 <div class="modal-header">
-                    <h2 class="modal-title fs-5" id="valoresModalLabel">Valores</h2>
+                    <h2 class="modal-title fs-1" id="valoresModalLabel">Valores</h2>
                     <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -451,6 +451,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="./js/script.js"></script>
 </body>
 </html>
