fix: adiciona link do atados

--- a/index.html
+++ b/index.html
@@ -435,13 +435,13 @@
         </div>
         <div class="row rodape__grupo-simios border-top w-100 m-0">
             <div class="d-flex justify-content-center align-items-center gap-1 my-4">
-                <a href="#" target="_blank">
-                    <img src="./img/social/atados.png" alt="Icone do Likedin">
+                <a href="https://www.atados.com.br/ong/grupo-simios-383636" target="_blank" title="Atados">
+                    <img src="./img/social/atados.png" alt="Icone do Atados">
                 </a>
-                <a href="https://www.linkedin.com/company/grupo-s%C3%ADmios/" target="_blank">
+                <a href="https://www.linkedin.com/company/grupo-s%C3%ADmios/" target="_blank" title="Linkedin">
                     <img src="./img/social/linkedin-cinza.png" alt="Icone do Likedin">
                 </a>
-                <a href="https://www.instagram.com/gruposimios/" target="_blank">
+                <a href="https://www.instagram.com/gruposimios/" target="_blank" title="Instagram">
                     <img src="./img/social/instagram-cinza.png" alt="Icone do Instagram">
                 </a>
                 <a class="ms-3 rodape__links-simios" href="./grupo-simios.html">Todos os direitos reservados para Grupo Símios</a>
